Angular performance improvements, fixed issue with show/hide on mobile.

--- a/client/css/main-xs.css
+++ b/client/css/main-xs.css
@@ -35,21 +35,27 @@
     /* inventory
     ========================= */
     .inventory__wrapper {
+        max-height: 0;
         overflow: hidden;
+    }
+    .inventory__wrapper--show {
+        max-height: 350px;
+        transition: all;
+        transition-delay: 0.35s;
     }
     @keyframes expand_inventory {
         from { max-height: 0;     }
         to   { max-height: 350px; }
     }
     .inventory__wrapper.ng-enter {
-        animation: expand_inventory 0.5s ease;
+        animation: expand_inventory 0.35s ease;
     }
     @keyframes collapse_inventory {
         from { max-height: 350px; }
         to   { max-height: 0;     }
     }
     .inventory__wrapper.ng-leave {
-        animation: collapse_inventory 0.5s ease;
+        animation: collapse_inventory 0.35s ease;
     }
     .inventory {
         margin-top: 20px;
